removed regular style.css and fixed overflow on home screen

--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 html {
   scroll-behavior: smooth;
   background-color: #F5F5F5;
+  overflow-x: hidden;
 }
 /* UNIVERSAL STYLES */
 
